--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">miIkea</string>
     <string name="action_settings">Settings</string>
-    <string name="bienvenido_Ikea">Descubre tus nuevos muebles.</string>
+    <string name="bienvenido_Ikea">Descubre tus nuevos muebles</string>
+    <string name="btn_Entrar">Entrar</string>
 </resources>
