Ya funciona registrarse.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="txtContrasena">Contraseña:</string>
     <string name="lblRepiteContrasena">Repite la contraseña:</string>
     <string name="btnRegistrarse">Registrar</string>
+    <string name="btnVolver">Volver</string>
 </resources>
