--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="btnRegistrarse">Registrar</string>
     <string name="btnVolver">Volver</string>
     <string name="lblSeleccionado" />
+    <string name="btnCargarProductos">Listar productos...</string>
 </resources>
